<resources>
    <string name="app_name">PicMove</string>
    <string name="icon_img_sel_circle" translatable="false"></string>
    <string name="icon_left" translatable="false"></string>
    <string name="icon_down" translatable="false"></string>
    <string name="icon_img_sel_able_circle" translatable="false"></string>
    <string name="icon_more" translatable="false">&#xe660;</string>
    <string name="icon_settings" translatable="false"></string>
    <string name="icon_right" translatable="false"></string>
    <string name="icon_add" translatable="false"></string>
    <!-- 通用 -->
    <string name="TXT_SUBMIT">Submit</string>
    <string name="TXT_HISTORY">History</string>
    <string name="TXT_CANCEL">Cancel</string>
    <string name="TXT_ALL">All</string>
    <string name="TXT_ADD">Add</string>
    <string name="TXT_DELETE">Delete</string>
    <string name="TXT_RENEW">Renew</string>
    <string name="TXT_PHOTOS">Photos</string>
    <string name="TXT_ALBUMS">Albums</string>
    <string name="TXT_PREVIEW">Preview</string>
    <string name="TXT_SELECTED">Selected</string>
    <string name="TXT_NOTICE">Tips</string>
    <string name="TXT_NONE">None</string>
    <string name="TXT_GRANT">Grant</string>
    <string name="TXT_DOWNLOAD">Download</string>
    <string name="TXT_CONFRIM">Confirm</string>
    <!-- Activity_Feedback -->
    <string name="TXT_AF_TOP_TITLE">Feedback</string>
    <string name="TXT_AF_BUG_DESC">Bug description</string>
    <string name="TXT_AF_TEN_ERROR">At least 10 characters</string>
    <string name="TXT_AF_BUG_AREA_HIT">Please describe the scenario that led up to the issue and the steps to replicate it.</string>
    <string name="TXT_AF_CONTACT_INFO">Contact info</string>
    <string name="TXT_AF_CONTACT_AREA">Please enter your phone or QQ number or e-mail for us to contact you.</string>
    <string name="TXT_AF_COMMITTING">Committing...</string>
    <string name="TXT_AF_REQUEST_FAILED">Server request failed!</string>
    <string name="TXT_AF_OK">OK</string>
    <!-- Activity_Main -->
    <string name="TXT_AM_RENEW_ALL">Renew All</string>
    <string name="TXT_AM_DO_YOU_NEED_UPDATE">Check out a new version, need to update it?</string>
    <string name="TXT_AM_WE_NEED_PERMISSIONS">The program needs to get your phone storage permission to run normally!</string>
    <string name="TXT_AM_DOING_COPY">Copying...</string>
    <string name="TXT_AM_PHOTOS_SELECTED">\? photo(s) selected</string>
    <string name="TXT_AM_RENEWING">Renewing...</string>
    <string name="TXT_AM_RENEW_SUCCEEDED">Renew succeeded!</string>
    <string name="TXT_AM_R_U_SURE_DELETE">Are you sure you want to delete the selected picture?</string>
    <string name="TXT_AM_DELETING">Deleting...</string>
    <string name="TXT_AM_DELETE_SUCCEEDED">Delete succeeded!</string>
    <!-- Activity_Settings -->
    <string name="TXT_AS_TITLE">Settings</string>
    <string name="TXT_AS_REINSERT_FILE">Reinsert file</string>
    <string name="TXT_AS_REINSERT_WHEN_TOP_UP">Re insert image file when top image</string>
    <string name="TXT_AS_IT_WILL_CAST_TIME">It will take some time for the image to be placed at the top by re inserting the file</string>
    <string name="TXT_AS_AUTO_UPDATE">Auto update</string>
    <string name="TXT_AS_AUTO_UPDATE_DESC">Automatically check for updated applications</string>
    <string name="TXT_AS_WILL_NOT_AUTO_UPDATE_IF_CANCEL">When automatic update is cancelled, the application does not automatically check for the latest version</string>
    <string name="TXT_AS_CHECK_VERSION">Check for updates</string>
    <string name="TXT_AS_CURRENT_VERSION">The current version is</string>
    <string name="TXT_AS_CHECKING_VERSION">Checking for updates...</string>
    <string name="TXT_AS_IS_UP_TO_DATE">The current application is the latest version!</string>
    <string name="TXT_AS_NEW_VERSION_RELEASE">The latest version ? Available for download!</string>
    <string name="TXT_AS_DO_YOU_WANT_TO_UPDATE">Check out a new version, do you need to update it ?</string>
    <string name="TXT_AS_CURRENT_VERSION_IS">The current version is?</string>
    <string name="TXT_AS_FEEDBACK">User feedback</string>
    <string name="TXT_AS_FEEDBACK_TO_DEVELOPER">Feedback to developers</string>
    <!-- Activity_Splash -->
    <string name="TXT_ASP_APP_NAME" translatable="false">PicMove.</string>
    <string name="TXT_ASP_COPY_RIGHT" translatable="false">Copyright © 2020-2021 JASON</string>
    <!-- ACTIVITY_SELECT_PHOTO -->
    <string name="TXT_ASL_OK_SELECTED">OK ( ? Selected )</string>
    <string name="TXT_ASL_LATEST_NAME">Latest</string>
    <!-- PHOTO_INDICATOR -->
    <string name="TXT_PI_OK_SELECTED">OK ( ? Selected )</string>

</resources>